synth class working

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@ CLOSURES
         
         
         var centerColors = [];
-        centerColors[0] = "rgba(98,29,40,.8)"
-        centerColors[1] = "rgba(98,29,40,.08)"
+        centerColors[0] = "rgba(98,29,40,1)"
+        centerColors[1] = "rgba(98,29,40,.15)"
         centerColors[2] = "rgba(0,0,0,0)"
 
         var filterStrength = 20;
@@ -182,7 +182,7 @@ CLOSURES
 
         var beatTracker = 0;
         var beat = 0;
-
+        var beatStart=true;
 
 
         var person = new Player(200, 200);
